# serializer version: 1
# name: test_browse_media_item
  dict({
    'container_id': 'LIBALBUM-134788273',
    'count': 14,
    'items': list([
      dict({
        'album': 'After Hours',
        'album_id': '134788273',
        'artist': 'The Weeknd',
        'browsable': False,
        'container_id': 'LIBALBUM-134788273',
        'image_url': 'http://resources.wimpmusic.com/images/bbe7f53c/44f0/41ba/873f/743e3091adde/640x640.jpg',
        'media_id': '134788274',
        'name': 'Alone Again',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'After Hours',
        'album_id': '134788273',
        'artist': 'The Weeknd',
        'browsable': False,
        'container_id': 'LIBALBUM-134788273',
        'image_url': 'http://resources.wimpmusic.com/images/bbe7f53c/44f0/41ba/873f/743e3091adde/640x640.jpg',
        'media_id': '134788275',
        'name': 'Too Late',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'After Hours',
        'album_id': '134788273',
        'artist': 'The Weeknd',
        'browsable': False,
        'container_id': 'LIBALBUM-134788273',
        'image_url': 'http://resources.wimpmusic.com/images/bbe7f53c/44f0/41ba/873f/743e3091adde/640x640.jpg',
        'media_id': '134788276',
        'name': 'Hardest To Love',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'After Hours',
        'album_id': '134788273',
        'artist': 'The Weeknd',
        'browsable': False,
        'container_id': 'LIBALBUM-134788273',
        'image_url': 'http://resources.wimpmusic.com/images/bbe7f53c/44f0/41ba/873f/743e3091adde/640x640.jpg',
        'media_id': '134788277',
        'name': 'Scared To Live',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'After Hours',
        'album_id': '134788273',
        'artist': 'The Weeknd',
        'browsable': False,
        'container_id': 'LIBALBUM-134788273',
        'image_url': 'http://resources.wimpmusic.com/images/bbe7f53c/44f0/41ba/873f/743e3091adde/640x640.jpg',
        'media_id': '134788278',
        'name': 'Snowchild',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'After Hours',
        'album_id': '134788273',
        'artist': 'The Weeknd',
        'browsable': False,
        'container_id': 'LIBALBUM-134788273',
        'image_url': 'http://resources.wimpmusic.com/images/bbe7f53c/44f0/41ba/873f/743e3091adde/640x640.jpg',
        'media_id': '134788279',
        'name': 'Escape From LA',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'After Hours',
        'album_id': '134788273',
        'artist': 'The Weeknd',
        'browsable': False,
        'container_id': 'LIBALBUM-134788273',
        'image_url': 'http://resources.wimpmusic.com/images/bbe7f53c/44f0/41ba/873f/743e3091adde/640x640.jpg',
        'media_id': '134788280',
        'name': 'Heartless',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'After Hours',
        'album_id': '134788273',
        'artist': 'The Weeknd',
        'browsable': False,
        'container_id': 'LIBALBUM-134788273',
        'image_url': 'http://resources.wimpmusic.com/images/bbe7f53c/44f0/41ba/873f/743e3091adde/640x640.jpg',
        'media_id': '134788281',
        'name': 'Faith',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'After Hours',
        'album_id': '134788273',
        'artist': 'The Weeknd',
        'browsable': False,
        'container_id': 'LIBALBUM-134788273',
        'image_url': 'http://resources.wimpmusic.com/images/bbe7f53c/44f0/41ba/873f/743e3091adde/640x640.jpg',
        'media_id': '134788282',
        'name': 'Blinding Lights',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'After Hours',
        'album_id': '134788273',
        'artist': 'The Weeknd',
        'browsable': False,
        'container_id': 'LIBALBUM-134788273',
        'image_url': 'http://resources.wimpmusic.com/images/bbe7f53c/44f0/41ba/873f/743e3091adde/640x640.jpg',
        'media_id': '134788283',
        'name': 'In Your Eyes',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'After Hours',
        'album_id': '134788273',
        'artist': 'The Weeknd',
        'browsable': False,
        'container_id': 'LIBALBUM-134788273',
        'image_url': 'http://resources.wimpmusic.com/images/bbe7f53c/44f0/41ba/873f/743e3091adde/640x640.jpg',
        'media_id': '134788284',
        'name': 'Save Your Tears',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'After Hours',
        'album_id': '134788273',
        'artist': 'The Weeknd',
        'browsable': False,
        'container_id': 'LIBALBUM-134788273',
        'image_url': 'http://resources.wimpmusic.com/images/bbe7f53c/44f0/41ba/873f/743e3091adde/640x640.jpg',
        'media_id': '134788285',
        'name': 'Repeat After Me (Interlude)',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'After Hours',
        'album_id': '134788273',
        'artist': 'The Weeknd',
        'browsable': False,
        'container_id': 'LIBALBUM-134788273',
        'image_url': 'http://resources.wimpmusic.com/images/bbe7f53c/44f0/41ba/873f/743e3091adde/640x640.jpg',
        'media_id': '134788286',
        'name': 'After Hours',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'After Hours',
        'album_id': '134788273',
        'artist': 'The Weeknd',
        'browsable': False,
        'container_id': 'LIBALBUM-134788273',
        'image_url': 'http://resources.wimpmusic.com/images/bbe7f53c/44f0/41ba/873f/743e3091adde/640x640.jpg',
        'media_id': '134788287',
        'name': 'Until I Bleed Out',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
    ]),
    'options': list([
    ]),
    'returned': 14,
    'source_id': 10,
  })
# ---
# name: test_browse_media_music_source
  dict({
    'container_id': None,
    'count': 3,
    'items': list([
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': 'http://mediaserver-cont-ch1-1-v4v6.pandora.com/images/public/devicead/t/r/a/m/daartpralbumart_500W_500H.jpg',
        'media_id': '3790855220637622543',
        'name': 'Thumbprint Radio',
        'playable': True,
        'source_id': 1028,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': 'http://cdn-radiotime-logos.tunein.com/s7332q.png',
        'media_id': 's7332',
        'name': '99.5 | Classical MPR (Classical Music)',
        'playable': True,
        'source_id': 1028,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': 'http://mediaserver-cont-dc6-2-v4v6.pandora.com/images/public/int/4/0/8/2/00602577432804_500W_500H.jpg',
        'media_id': '1935916853323522319',
        'name': "Today's Hits Radio",
        'playable': True,
        'source_id': 1028,
        'type': <MediaType.STATION: 'station'>,
      }),
    ]),
    'options': list([
      dict({
        'context': 'browse',
        'id': 20,
        'name': 'Remove from HEOS Favorites',
      }),
    ]),
    'returned': 3,
    'source_id': 1028,
  })
# ---
# name: test_get_favorites
  dict({
    1: dict({
      'album': None,
      'album_id': None,
      'artist': None,
      'browsable': False,
      'container_id': None,
      'image_url': 'http://mediaserver-cont-ch1-1-v4v6.pandora.com/images/public/devicead/t/r/a/m/daartpralbumart_500W_500H.jpg',
      'media_id': '3790855220637622543',
      'name': 'Thumbprint Radio',
      'playable': True,
      'source_id': 1028,
      'type': <MediaType.STATION: 'station'>,
    }),
    2: dict({
      'album': None,
      'album_id': None,
      'artist': None,
      'browsable': False,
      'container_id': None,
      'image_url': 'http://cdn-radiotime-logos.tunein.com/s7332q.png',
      'media_id': 's7332',
      'name': '99.5 | Classical MPR (Classical Music)',
      'playable': True,
      'source_id': 1028,
      'type': <MediaType.STATION: 'station'>,
    }),
    3: dict({
      'album': None,
      'album_id': None,
      'artist': None,
      'browsable': False,
      'container_id': None,
      'image_url': 'http://mediaserver-cont-dc6-2-v4v6.pandora.com/images/public/int/4/0/8/2/00602577432804_500W_500H.jpg',
      'media_id': '1935916853323522319',
      'name': "Today's Hits Radio",
      'playable': True,
      'source_id': 1028,
      'type': <MediaType.STATION: 'station'>,
    }),
  })
# ---
# name: test_get_group_info_by_id
  dict({
    'group_id': -263109739,
    'is_muted': False,
    'lead_player_id': -263109739,
    'member_player_ids': list([
      845195621,
    ]),
    'name': 'Zone 1 + Zone 2',
    'volume': 42,
  })
# ---
# name: test_get_group_info_by_id_already_loaded_refresh
  dict({
    'group_id': -263109739,
    'is_muted': False,
    'lead_player_id': -263109739,
    'member_player_ids': list([
      845195621,
    ]),
    'name': 'Zone 1 + Zone 2',
    'volume': 42,
  })
# ---
# name: test_get_groups
  dict({
    1: dict({
      'group_id': 1,
      'is_muted': False,
      'lead_player_id': 1,
      'member_player_ids': list([
        2,
      ]),
      'name': 'Back Patio + Front Porch',
      'volume': 42,
    }),
  })
# ---
# name: test_get_input_sources
  list([
    dict({
      'album': None,
      'album_id': None,
      'artist': None,
      'browsable': False,
      'container_id': None,
      'image_url': '',
      'media_id': 'inputs/cable_sat',
      'name': 'Theater Receiver - CBL/SAT',
      'playable': True,
      'source_id': 546978854,
      'type': <MediaType.STATION: 'station'>,
    }),
    dict({
      'album': None,
      'album_id': None,
      'artist': None,
      'browsable': False,
      'container_id': None,
      'image_url': '',
      'media_id': 'inputs/dvd',
      'name': 'Theater Receiver - DVD',
      'playable': True,
      'source_id': 546978854,
      'type': <MediaType.STATION: 'station'>,
    }),
    dict({
      'album': None,
      'album_id': None,
      'artist': None,
      'browsable': False,
      'container_id': None,
      'image_url': '',
      'media_id': 'inputs/bluray',
      'name': 'Theater Receiver - Blu-ray',
      'playable': True,
      'source_id': 546978854,
      'type': <MediaType.STATION: 'station'>,
    }),
    dict({
      'album': None,
      'album_id': None,
      'artist': None,
      'browsable': False,
      'container_id': None,
      'image_url': '',
      'media_id': 'inputs/game',
      'name': 'Theater Receiver - Game',
      'playable': True,
      'source_id': 546978854,
      'type': <MediaType.STATION: 'station'>,
    }),
    dict({
      'album': None,
      'album_id': None,
      'artist': None,
      'browsable': False,
      'container_id': None,
      'image_url': '',
      'media_id': 'inputs/aux1',
      'name': 'Theater Receiver - AUX1',
      'playable': True,
      'source_id': 546978854,
      'type': <MediaType.STATION: 'station'>,
    }),
    dict({
      'album': None,
      'album_id': None,
      'artist': None,
      'browsable': False,
      'container_id': None,
      'image_url': '',
      'media_id': 'inputs/aux2',
      'name': 'Theater Receiver - AUX2',
      'playable': True,
      'source_id': 546978854,
      'type': <MediaType.STATION: 'station'>,
    }),
    dict({
      'album': None,
      'album_id': None,
      'artist': None,
      'browsable': False,
      'container_id': None,
      'image_url': '',
      'media_id': 'inputs/mediaplayer',
      'name': 'Theater Receiver - Media Player',
      'playable': True,
      'source_id': 546978854,
      'type': <MediaType.STATION: 'station'>,
    }),
    dict({
      'album': None,
      'album_id': None,
      'artist': None,
      'browsable': False,
      'container_id': None,
      'image_url': '',
      'media_id': 'inputs/hdradio',
      'name': 'Theater Receiver - HD Radio',
      'playable': True,
      'source_id': 546978854,
      'type': <MediaType.STATION: 'station'>,
    }),
    dict({
      'album': None,
      'album_id': None,
      'artist': None,
      'browsable': False,
      'container_id': None,
      'image_url': '',
      'media_id': 'inputs/tvaudio',
      'name': 'Theater Receiver - TV Audio',
      'playable': True,
      'source_id': 546978854,
      'type': <MediaType.STATION: 'station'>,
    }),
    dict({
      'album': None,
      'album_id': None,
      'artist': None,
      'browsable': False,
      'container_id': None,
      'image_url': '',
      'media_id': 'inputs/phono',
      'name': 'Theater Receiver - Phono',
      'playable': True,
      'source_id': 546978854,
      'type': <MediaType.STATION: 'station'>,
    }),
    dict({
      'album': None,
      'album_id': None,
      'artist': None,
      'browsable': False,
      'container_id': None,
      'image_url': '',
      'media_id': 'inputs/line_in_1',
      'name': 'HEOS Drive - Line In 1',
      'playable': True,
      'source_id': -263109739,
      'type': <MediaType.STATION: 'station'>,
    }),
    dict({
      'album': None,
      'album_id': None,
      'artist': None,
      'browsable': False,
      'container_id': None,
      'image_url': '',
      'media_id': 'inputs/line_in_2',
      'name': 'HEOS Drive - Line In 2',
      'playable': True,
      'source_id': -263109739,
      'type': <MediaType.STATION: 'station'>,
    }),
    dict({
      'album': None,
      'album_id': None,
      'artist': None,
      'browsable': False,
      'container_id': None,
      'image_url': '',
      'media_id': 'inputs/line_in_3',
      'name': 'HEOS Drive - Line In 3',
      'playable': True,
      'source_id': -263109739,
      'type': <MediaType.STATION: 'station'>,
    }),
    dict({
      'album': None,
      'album_id': None,
      'artist': None,
      'browsable': False,
      'container_id': None,
      'image_url': '',
      'media_id': 'inputs/line_in_4',
      'name': 'HEOS Drive - Line In 4',
      'playable': True,
      'source_id': -263109739,
      'type': <MediaType.STATION: 'station'>,
    }),
    dict({
      'album': None,
      'album_id': None,
      'artist': None,
      'browsable': False,
      'container_id': None,
      'image_url': '',
      'media_id': 'inputs/optical_in_1',
      'name': 'HEOS Drive - Optical In 1',
      'playable': True,
      'source_id': -263109739,
      'type': <MediaType.STATION: 'station'>,
    }),
    dict({
      'album': None,
      'album_id': None,
      'artist': None,
      'browsable': False,
      'container_id': None,
      'image_url': '',
      'media_id': 'inputs/optical_in_2',
      'name': 'HEOS Drive - Optical In 2',
      'playable': True,
      'source_id': -263109739,
      'type': <MediaType.STATION: 'station'>,
    }),
    dict({
      'album': None,
      'album_id': None,
      'artist': None,
      'browsable': False,
      'container_id': None,
      'image_url': '',
      'media_id': 'inputs/coax_in_1',
      'name': 'HEOS Drive - Coaxial In 1',
      'playable': True,
      'source_id': -263109739,
      'type': <MediaType.STATION: 'station'>,
    }),
    dict({
      'album': None,
      'album_id': None,
      'artist': None,
      'browsable': False,
      'container_id': None,
      'image_url': '',
      'media_id': 'inputs/coax_in_2',
      'name': 'HEOS Drive - Coaxial In 2',
      'playable': True,
      'source_id': -263109739,
      'type': <MediaType.STATION: 'station'>,
    }),
  ])
# ---
# name: test_get_music_sources
  dict({
    1: dict({
      'available': True,
      'image_url': 'https://production.ws.skyegloup.com:443/media/images/service/logos/pandora.png',
      'name': 'Pandora',
      'service_username': 'test@test.com',
      'source_id': 1,
      'type': <MediaType.MUSIC_SERVICE: 'music_service'>,
    }),
    2: dict({
      'available': False,
      'image_url': 'https://production.ws.skyegloup.com:443/media/images/service/logos/rhapsody.png',
      'name': 'Rhapsody',
      'service_username': None,
      'source_id': 2,
      'type': <MediaType.MUSIC_SERVICE: 'music_service'>,
    }),
    3: dict({
      'available': False,
      'image_url': 'https://production.ws.skyegloup.com:443/media/images/service/logos/tunein.png',
      'name': 'TuneIn',
      'service_username': None,
      'source_id': 3,
      'type': <MediaType.MUSIC_SERVICE: 'music_service'>,
    }),
    5: dict({
      'available': False,
      'image_url': 'https://production.ws.skyegloup.com:443/media/images/service/logos/deezer.png',
      'name': 'Deezer',
      'service_username': None,
      'source_id': 5,
      'type': <MediaType.MUSIC_SERVICE: 'music_service'>,
    }),
    6: dict({
      'available': False,
      'image_url': 'https://production.ws.skyegloup.com:443/media/images/service/logos/napster.png',
      'name': 'Napster',
      'service_username': None,
      'source_id': 6,
      'type': <MediaType.MUSIC_SERVICE: 'music_service'>,
    }),
    7: dict({
      'available': False,
      'image_url': 'https://production.ws.skyegloup.com:443/media/images/service/logos/iheartradio.png',
      'name': 'iHeartRadio',
      'service_username': None,
      'source_id': 7,
      'type': <MediaType.MUSIC_SERVICE: 'music_service'>,
    }),
    8: dict({
      'available': False,
      'image_url': 'https://production.ws.skyegloup.com:443/media/images/service/logos/siriusxm.png',
      'name': 'SiriusXM',
      'service_username': None,
      'source_id': 8,
      'type': <MediaType.MUSIC_SERVICE: 'music_service'>,
    }),
    9: dict({
      'available': False,
      'image_url': 'https://production.ws.skyegloup.com:443/media/images/service/logos/soundcloud.png',
      'name': 'SoundCloud',
      'service_username': None,
      'source_id': 9,
      'type': <MediaType.MUSIC_SERVICE: 'music_service'>,
    }),
    10: dict({
      'available': False,
      'image_url': 'https://production.ws.skyegloup.com:443/media/images/service/logos/tidal.png',
      'name': 'Tidal',
      'service_username': None,
      'source_id': 10,
      'type': <MediaType.MUSIC_SERVICE: 'music_service'>,
    }),
    13: dict({
      'available': True,
      'image_url': 'https://production.ws.skyegloup.com:443/media/images/service/logos/amazon.png',
      'name': 'Amazon',
      'service_username': 'Test User',
      'source_id': 13,
      'type': <MediaType.MUSIC_SERVICE: 'music_service'>,
    }),
    1024: dict({
      'available': True,
      'image_url': 'https://production.ws.skyegloup.com:443/media/images/service/logos/musicsource_logo_servers.png',
      'name': 'Local Music',
      'service_username': None,
      'source_id': 1024,
      'type': <MediaType.HEOS_SERVER: 'heos_server'>,
    }),
    1025: dict({
      'available': True,
      'image_url': 'https://production.ws.skyegloup.com:443/media/images/service/logos/musicsource_logo_playlists.png',
      'name': 'Playlists',
      'service_username': None,
      'source_id': 1025,
      'type': <MediaType.HEOS_SERVICE: 'heos_service'>,
    }),
    1026: dict({
      'available': True,
      'image_url': 'https://production.ws.skyegloup.com:443/media/images/service/logos/musicsource_logo_history.png',
      'name': 'History',
      'service_username': None,
      'source_id': 1026,
      'type': <MediaType.HEOS_SERVICE: 'heos_service'>,
    }),
    1027: dict({
      'available': True,
      'image_url': 'https://production.ws.skyegloup.com:443/media/images/service/logos/musicsource_logo_aux.png',
      'name': 'AUX Input',
      'service_username': None,
      'source_id': 1027,
      'type': <MediaType.HEOS_SERVICE: 'heos_service'>,
    }),
    1028: dict({
      'available': True,
      'image_url': 'https://production.ws.skyegloup.com:443/media/images/service/logos/musicsource_logo_favorites.png',
      'name': 'Favorites',
      'service_username': None,
      'source_id': 1028,
      'type': <MediaType.HEOS_SERVICE: 'heos_service'>,
    }),
  })
# ---
# name: test_get_now_playing_media
  dict({
    'album': 'Album',
    'album_id': '123456',
    'artist': 'Artist',
    'current_position': None,
    'current_position_updated': None,
    'duration': None,
    'image_url': 'http://cont-5.p-cdn.us/images/public/int/6/1/1/9/050087149116_500W_500H.jpg',
    'media_id': '4256592506324148495',
    'options': list([
      dict({
        'context': 'play',
        'id': 11,
        'name': 'Thumbs Up',
      }),
      dict({
        'context': 'play',
        'id': 12,
        'name': 'Thumbs Down',
      }),
      dict({
        'context': 'play',
        'id': 19,
        'name': 'Add to HEOS Favorites',
      }),
    ]),
    'queue_id': 1,
    'song': "Disney (Children's) Radio",
    'source_id': 13,
    'station': "Disney (Children's) Radio",
    'supported_controls': list([
      <ControlType.PLAY: 'play'>,
      <ControlType.PAUSE: 'pause'>,
      <ControlType.STOP: 'stop'>,
      <ControlType.PLAY_NEXT: 'play_next'>,
      <ControlType.PLAY_PREVIOUS: 'play_previous'>,
    ]),
    'type': <MediaType.STATION: 'station'>,
  })
# ---
# name: test_get_players
  dict({
    1: dict({
      'available': True,
      'control': <VolumeControlType.IR: 2>,
      'group_id': 2,
      'ip_address': '127.0.0.1',
      'is_muted': False,
      'line_out': <LineOutLevelType.FIXED: 2>,
      'model': 'HEOS Drive',
      'name': 'Back Patio',
      'network': <NetworkType.WIRED: 'wired'>,
      'now_playing_media': dict({
        'album': 'Album',
        'album_id': '123456',
        'artist': 'Artist',
        'current_position': None,
        'current_position_updated': None,
        'duration': None,
        'image_url': 'http://cont-5.p-cdn.us/images/public/int/6/1/1/9/050087149116_500W_500H.jpg',
        'media_id': '4256592506324148495',
        'options': list([
          dict({
            'context': 'play',
            'id': 11,
            'name': 'Thumbs Up',
          }),
          dict({
            'context': 'play',
            'id': 12,
            'name': 'Thumbs Down',
          }),
          dict({
            'context': 'play',
            'id': 19,
            'name': 'Add to HEOS Favorites',
          }),
        ]),
        'queue_id': 1,
        'song': "Disney (Children's) Radio",
        'source_id': 13,
        'station': "Disney (Children's) Radio",
        'supported_controls': list([
          <ControlType.PLAY: 'play'>,
          <ControlType.PAUSE: 'pause'>,
          <ControlType.STOP: 'stop'>,
          <ControlType.PLAY_NEXT: 'play_next'>,
          <ControlType.PLAY_PREVIOUS: 'play_previous'>,
        ]),
        'type': <MediaType.STATION: 'station'>,
      }),
      'playback_error': None,
      'player_id': 1,
      'repeat': <RepeatType.OFF: 'off'>,
      'serial': 'B1A2C3K',
      'shuffle': False,
      'state': <PlayState.STOP: 'stop'>,
      'supported_version': True,
      'version': '3.34.240',
      'volume': 36,
    }),
    2: dict({
      'available': True,
      'control': <VolumeControlType.UNKNOWN: 0>,
      'group_id': 2,
      'ip_address': '127.0.0.2',
      'is_muted': False,
      'line_out': <LineOutLevelType.VARIABLE: 1>,
      'model': 'HEOS Drive',
      'name': 'Front Porch',
      'network': <NetworkType.WIFI: 'wifi'>,
      'now_playing_media': dict({
        'album': 'Album',
        'album_id': '123456',
        'artist': 'Artist',
        'current_position': None,
        'current_position_updated': None,
        'duration': None,
        'image_url': 'http://cont-5.p-cdn.us/images/public/int/6/1/1/9/050087149116_500W_500H.jpg',
        'media_id': '4256592506324148495',
        'options': list([
          dict({
            'context': 'play',
            'id': 11,
            'name': 'Thumbs Up',
          }),
          dict({
            'context': 'play',
            'id': 12,
            'name': 'Thumbs Down',
          }),
          dict({
            'context': 'play',
            'id': 19,
            'name': 'Add to HEOS Favorites',
          }),
        ]),
        'queue_id': 1,
        'song': "Disney (Children's) Radio",
        'source_id': 13,
        'station': "Disney (Children's) Radio",
        'supported_controls': list([
          <ControlType.PLAY: 'play'>,
          <ControlType.PAUSE: 'pause'>,
          <ControlType.STOP: 'stop'>,
          <ControlType.PLAY_NEXT: 'play_next'>,
          <ControlType.PLAY_PREVIOUS: 'play_previous'>,
        ]),
        'type': <MediaType.STATION: 'station'>,
      }),
      'playback_error': None,
      'player_id': 2,
      'repeat': <RepeatType.OFF: 'off'>,
      'serial': None,
      'shuffle': False,
      'state': <PlayState.STOP: 'stop'>,
      'supported_version': True,
      'version': '3.34.240',
      'volume': 36,
    }),
  })
# ---
# name: test_get_players_unsupported_versions
  dict({
    1: dict({
      'available': True,
      'control': <VolumeControlType.UNKNOWN: 0>,
      'group_id': None,
      'ip_address': None,
      'is_muted': False,
      'line_out': <LineOutLevelType.UNKNOWN: 0>,
      'model': 'HEOS Link',
      'name': 'Back Patio',
      'network': <NetworkType.UNKNOWN: 'unknown'>,
      'now_playing_media': dict({
        'album': 'Album',
        'album_id': '123456',
        'artist': 'Artist',
        'current_position': None,
        'current_position_updated': None,
        'duration': None,
        'image_url': 'http://cont-5.p-cdn.us/images/public/int/6/1/1/9/050087149116_500W_500H.jpg',
        'media_id': '4256592506324148495',
        'options': list([
          dict({
            'context': 'play',
            'id': 11,
            'name': 'Thumbs Up',
          }),
          dict({
            'context': 'play',
            'id': 12,
            'name': 'Thumbs Down',
          }),
          dict({
            'context': 'play',
            'id': 19,
            'name': 'Add to HEOS Favorites',
          }),
        ]),
        'queue_id': 1,
        'song': "Disney (Children's) Radio",
        'source_id': 13,
        'station': "Disney (Children's) Radio",
        'supported_controls': list([
          <ControlType.PLAY: 'play'>,
          <ControlType.PAUSE: 'pause'>,
          <ControlType.STOP: 'stop'>,
          <ControlType.PLAY_NEXT: 'play_next'>,
          <ControlType.PLAY_PREVIOUS: 'play_previous'>,
        ]),
        'type': <MediaType.STATION: 'station'>,
      }),
      'playback_error': None,
      'player_id': 1,
      'repeat': <RepeatType.OFF: 'off'>,
      'serial': None,
      'shuffle': False,
      'state': <PlayState.STOP: 'stop'>,
      'supported_version': False,
      'version': None,
      'volume': 36,
    }),
    2: dict({
      'available': True,
      'control': <VolumeControlType.UNKNOWN: 0>,
      'group_id': None,
      'ip_address': '127.0.0.2',
      'is_muted': False,
      'line_out': <LineOutLevelType.UNKNOWN: 0>,
      'model': 'HEOS 5',
      'name': 'Front Porch',
      'network': <NetworkType.WIFI: 'wifi'>,
      'now_playing_media': dict({
        'album': 'Album',
        'album_id': '123456',
        'artist': 'Artist',
        'current_position': None,
        'current_position_updated': None,
        'duration': None,
        'image_url': 'http://cont-5.p-cdn.us/images/public/int/6/1/1/9/050087149116_500W_500H.jpg',
        'media_id': '4256592506324148495',
        'options': list([
          dict({
            'context': 'play',
            'id': 11,
            'name': 'Thumbs Up',
          }),
          dict({
            'context': 'play',
            'id': 12,
            'name': 'Thumbs Down',
          }),
          dict({
            'context': 'play',
            'id': 19,
            'name': 'Add to HEOS Favorites',
          }),
        ]),
        'queue_id': 1,
        'song': "Disney (Children's) Radio",
        'source_id': 13,
        'station': "Disney (Children's) Radio",
        'supported_controls': list([
          <ControlType.PLAY: 'play'>,
          <ControlType.PAUSE: 'pause'>,
          <ControlType.STOP: 'stop'>,
          <ControlType.PLAY_NEXT: 'play_next'>,
          <ControlType.PLAY_PREVIOUS: 'play_previous'>,
        ]),
        'type': <MediaType.STATION: 'station'>,
      }),
      'playback_error': None,
      'player_id': 2,
      'repeat': <RepeatType.OFF: 'off'>,
      'serial': None,
      'shuffle': False,
      'state': <PlayState.STOP: 'stop'>,
      'supported_version': False,
      'version': '1.583.147',
      'volume': 36,
    }),
  })
# ---
# name: test_get_playlists
  list([
    dict({
      'album': None,
      'album_id': None,
      'artist': None,
      'browsable': True,
      'container_id': '171566',
      'image_url': '',
      'media_id': None,
      'name': 'Rockin Songs',
      'playable': True,
      'source_id': 1025,
      'type': <MediaType.PLAYLIST: 'playlist'>,
    }),
  ])
# ---
# name: test_player_now_playing_changed_event[changed_state]
  dict({
    'album': "I've Been Waiting (Single) (Explicit)",
    'album_id': '1',
    'artist': 'Lil Peep & ILoveMakonnen',
    'current_position': None,
    'current_position_updated': None,
    'duration': None,
    'image_url': 'http://media/url',
    'media_id': '2PxuY99Qty',
    'options': list([
      dict({
        'context': 'play',
        'id': 11,
        'name': 'Thumbs Up',
      }),
      dict({
        'context': 'play',
        'id': 12,
        'name': 'Thumbs Down',
      }),
      dict({
        'context': 'play',
        'id': 20,
        'name': 'Remove from HEOS Favorites',
      }),
    ]),
    'queue_id': 1,
    'song': "I've Been Waiting (feat. Fall Out Boy)",
    'source_id': 1,
    'station': "Today's Hits Radio",
    'supported_controls': list([
      <ControlType.PLAY: 'play'>,
      <ControlType.PAUSE: 'pause'>,
      <ControlType.STOP: 'stop'>,
      <ControlType.PLAY_NEXT: 'play_next'>,
    ]),
    'type': <MediaType.STATION: 'station'>,
  })
# ---
# name: test_player_now_playing_changed_event[current_state]
  dict({
    'album': 'Album',
    'album_id': '123456',
    'artist': 'Artist',
    'current_position': None,
    'current_position_updated': None,
    'duration': None,
    'image_url': 'http://cont-5.p-cdn.us/images/public/int/6/1/1/9/050087149116_500W_500H.jpg',
    'media_id': '4256592506324148495',
    'options': list([
      dict({
        'context': 'play',
        'id': 11,
        'name': 'Thumbs Up',
      }),
      dict({
        'context': 'play',
        'id': 12,
        'name': 'Thumbs Down',
      }),
      dict({
        'context': 'play',
        'id': 19,
        'name': 'Add to HEOS Favorites',
      }),
    ]),
    'queue_id': 1,
    'song': "Disney (Children's) Radio",
    'source_id': 13,
    'station': "Disney (Children's) Radio",
    'supported_controls': list([
      <ControlType.PLAY: 'play'>,
      <ControlType.PAUSE: 'pause'>,
      <ControlType.STOP: 'stop'>,
      <ControlType.PLAY_NEXT: 'play_next'>,
      <ControlType.PLAY_PREVIOUS: 'play_previous'>,
    ]),
    'type': <MediaType.STATION: 'station'>,
  })
# ---
# name: test_validate_connection
  dict({
    'connected_to_preferred_host': True,
    'host': dict({
      'ip_address': '127.0.0.1',
      'model': 'HEOS Drive',
      'name': 'Back Patio',
      'network': <NetworkType.WIRED: 'wired'>,
      'serial': 'B1A2C3K',
      'supported_version': True,
      'version': '3.34.240',
    }),
    'hosts': list([
      dict({
        'ip_address': '127.0.0.1',
        'model': 'HEOS Drive',
        'name': 'Back Patio',
        'network': <NetworkType.WIRED: 'wired'>,
        'serial': 'B1A2C3K',
        'supported_version': True,
        'version': '3.34.240',
      }),
      dict({
        'ip_address': '127.0.0.2',
        'model': 'HEOS Drive',
        'name': 'Front Porch',
        'network': <NetworkType.WIFI: 'wifi'>,
        'serial': None,
        'supported_version': True,
        'version': '3.34.240',
      }),
    ]),
    'is_signed_in': True,
    'preferred_hosts': list([
      dict({
        'ip_address': '127.0.0.1',
        'model': 'HEOS Drive',
        'name': 'Back Patio',
        'network': <NetworkType.WIRED: 'wired'>,
        'serial': 'B1A2C3K',
        'supported_version': True,
        'version': '3.34.240',
      }),
    ]),
    'signed_in_username': 'example@example.com',
  })
# ---
# name: test_validate_connection_unsupported_versions
  dict({
    'connected_to_preferred_host': False,
    'host': None,
    'hosts': list([
      dict({
        'ip_address': None,
        'model': 'HEOS Link',
        'name': 'Back Patio',
        'network': <NetworkType.UNKNOWN: 'unknown'>,
        'serial': None,
        'supported_version': False,
        'version': None,
      }),
      dict({
        'ip_address': '127.0.0.2',
        'model': 'HEOS 5',
        'name': 'Front Porch',
        'network': <NetworkType.WIFI: 'wifi'>,
        'serial': None,
        'supported_version': False,
        'version': '1.583.147',
      }),
    ]),
    'is_signed_in': True,
    'preferred_hosts': list([
    ]),
    'signed_in_username': 'example@example.com',
  })
# ---
